# ycal

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dev.sh  example_config.json  justfile  package-lock.json
.github/workflows/: site.yml
config/: en.json  sv.json
config/holidays/: albania_2026.json  armenia_2026.json  azerbaijan_2026.json  bangladesh_2026.json  belarus_2026.json  bosnia_and_herzegovina_2026.json  bulgaria_2026.json  england_and_wales_2026.json  estonia_2026.json  ethiopia_2026.json  iceland_2026.json  india_2026.json  iran_2026.json  ireland_2026.json  kazakhstan_2026.json  kenya_2026.json  latvia_2026.json  lithuania_2026.json  luxembourg_2026.json  malaysia_2026.json  malta_2026.json  mongolia_2026.json  nepal_2026.json  north_macedonia_2026.json  norway_2026.json  pakistan_2026.json  philippines_2026.json  serbia_2026.json  slovenia_2026.json  south_africa_2026.json  spain_2026.json  sri_lanka_2026.json  uzbekistan_2026.json
config/themes/: contemporary.css  minimalist.css  retro.css
docs/: index.html  ycal.d.ts  ycal.js  ycal_bg.wasm  ycal_bg.wasm.d.ts
holidays/: sweden_2026.json
locale/: sv.json
src/: cli.rs  holidays.rs  html_gen.rs  lib.rs  main.rs  server.rs  wasm.rs
static/: index.html
templates/: calendar.mustache  index.html  shell.html
themes/: contemporary.css  minimalist.css  retro.css
