[package]
name = "ycal"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/html_gen.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "holidays"
path = "src/holidays.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
ramhorns = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "3", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
